# azdo-harvest

./: .env.example  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
azdo_harvest/: __init__.py  cli.py  downloader.py  models.py  search.py
examples/: basic_usage.py  download_files.py  test_hash.py
tests/: __init__.py  test_models.py
