[project]
name = "azdo-harvest"
version = "0.1.0"
description = "Harvester Framework to Search Azure Devops Organizations"
authors = [
    {name = "rothoma2",email = "thomcrnl@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
azdo-harvest = "azdo_harvest.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
