[project]
name = "azdo-harvest"
version = "0.1.0"
description = "Harvester Framework to Search Azure Devops Organizations"
authors = [
    {name = "rothoma2",email = "thomcrnl@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
keywords = ["azure", "devops", "search", "api", "cli", "azure-devops", "repository-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/rothoma2/azdo-harvest"
Repository = "https://github.com/rothoma2/azdo-harvest"
Issues = "https://github.com/rothoma2/azdo-harvest/issues"
Documentation = "https://github.com/rothoma2/azdo-harvest#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
azdo-harvest = "azdo_harvest.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
